<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <EditText
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signin"
        app:layout_constraintEnd_toEndOf="@+id/emailfield"
        app:layout_constraintStart_toStartOf="@+id/emailfield"
        app:layout_constraintTop_toBottomOf="@+id/emailfield" />

    <EditText
        android:id="@+id/emailfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Login"
        app:layout_constraintBottom_toTopOf="@+id/registernow"
        app:layout_constraintEnd_toEndOf="@+id/emailfield"
        app:layout_constraintStart_toStartOf="@+id/emailfield"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/registernow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Register"
        app:layout_constraintBottom_toTopOf="@+id/google_signin"
        app:layout_constraintEnd_toEndOf="@+id/emailfield"
        app:layout_constraintStart_toStartOf="@+id/emailfield"
        app:layout_constraintTop_toBottomOf="@+id/signin" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailfield"
        app:layout_constraintStart_toStartOf="@+id/emailfield"
        app:layout_constraintTop_toBottomOf="@+id/registernow" />


</androidx.constraintlayout.widget.ConstraintLayout>